--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
-{% include head.html %}
+  {% include head.html %}
 
-<body>
+  <body>
 
-    {% include nav.html %}
+    {% include sidebar.html %}
 
-    {{ content }}
+    <div class="content container">
+      {{ content }}
+    </div>
 
-    {% include footer.html %}
-		
-    {% include google_analytics.html %}
-
-</body>
-
+  </body>
 </html>
