--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
-<h1> End of story </h1>
+<h1 class="text-center"> End of story </h1>
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
