--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <div class="content container">
       {{ content }}
     </div>
-
+		
+    {% include google-analytics.html %}
   </body>
 </html>
