--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,6 @@
       {{ content }}
     </div>
 		
-    {% include google-analytics.html %}
+    {% include google_analytics.html %}
   </body>
 </html>
