--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="{{ "/css/poole.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="/css/syntax.css">
   <link rel="stylesheet" href="/css/hyde.css">
+  <link rel="stylesheet" href="/css/octicons/octicons.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   <!-- Icons -->
