--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,12 @@ layout: default
 	</p>
 
   <span class="post-date">{{ page.date | date_to_string }}</span>
+{% if page.excerpt %}
+<div class="message">
+  {{ page.excerpt }}
+</div>
+{% endif %}
+
   {{ content }}
 </div>
 <h1 class="text-center"> End of story </h1>
