--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,11 +15,13 @@
   </title>
 
   <!-- CSS -->
-	<link rel="stylesheet" href="{{ "/css/poole.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="/css/poole.css">
   <link rel="stylesheet" href="/css/syntax.css">
   <link rel="stylesheet" href="/css/hyde.css">
   <link rel="stylesheet" href="/css/octicons/octicons.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+	{% for style in page.styles %}<link rel="stylesheet" type="text/css" href="{{ '/css/' | append: style }}" />
+	{%endfor%}
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-144-precomposed.png">
