--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="/css/syntax.css">
   <link rel="stylesheet" href="/css/hyde.css">
   <link rel="stylesheet" href="/css/octicons/octicons.css">
+  <link rel="stylesheet" href="/css/socicon/socicon.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 	{% for style in page.styles %}<link rel="stylesheet" type="text/css" href="{{ '/css/' | append: style }}" />
 	{%endfor%}
