--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,10 @@
       {% endfor %}
 
     </nav>
-
+		<a target="blank" href="http://facebook.com/colleowino"><span class="socicon socicon-facebook"></span></a>
+		<a target="_blank"
+			href="http://twitter.com/colleowino"><span class="socicon socicon-twitter"></span></a>
+		<a target="_blank" href="http://github.com/colleowino"><span class="socicon socicon-github"></span></a>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
