--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,7 @@ layout: default
 	<p class="post-tag">
 			<span>{% for cat in page.categories %}<a href="{{ '/category' | prepend: site.baseurl | prepend: site.url }}/#{{ cat }}"><span class="octicon octicon-list-unordered"></span>&nbsp;{{ cat }}</a>{% endfor %}</span>
 			<span>{% for tag in page.tags %}
-					<a class="word-keep" href="{{ '/tags' | prepend: site.baseurl }}/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
-					{% endfor %}
-			</span>
+					<a class="word-keep" href="{{ '/tags' | prepend: site.baseurl }}/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a> {% endfor %} </span>
 	</p>
 
   <span class="post-date">{{ page.date | date_to_string }}</span>
