--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,10 +29,10 @@
 
     </nav>
 		<div class="social-box">
-		<a class="social" target="blank" href="http://facebook.com/colleowino"><span class="socicon socicon-facebook"></span></a>
+		<a class="social" target="blank" href="http://facebook.com/colleowino"><i class="fa fa-facebook-square "></i></a>
 		<a class="social" target="_blank"
-			href="http://twitter.com/colleowino"><span class="socicon socicon-twitter"></span></a>
-		<a class="social" target="_blank" href="http://github.com/colleowino"><span class="socicon socicon-github"></span></a>
+			href="http://twitter.com/colleowino"><i class="fa fa-twitter-square"></i></a>
+		<a class="social" target="_blank" href="http://github.com/colleowino"><i class="fa fa-github-square"></i></a>
 		</div>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
