add email to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,6 +33,8 @@
 		<a class="social" target="_blank"
 			href="http://twitter.com/colleowino"><i class="fa fa-twitter-square"></i></a>
 		<a class="social" target="_blank" href="http://github.com/colleowino"><i class="fa fa-github-square"></i></a>
+		<a class="social" href="mailto:colleowino@gmail.com"><i class="fa fa-envelope-square"></i></a>
+	
 		</div>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
