--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,8 +2,8 @@
   <div class="container ">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}">
-          {{ site.title }}
+        <a href="{{ site.baseurl }}/">
+          {{ site.title }} 
         </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
