--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="/css/poole.css">
   <link rel="stylesheet" href="/css/syntax.css">
   <link rel="stylesheet" href="/css/lanyon.css">
+  <link rel="stylesheet" href="/css/extras.css">
   <link rel="stylesheet" href="/css/octicons/octicons.css">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
