--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,28 +9,18 @@
   </div>
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
-
-    {% comment %}
-      The code below dynamically generates a sidebar nav of pages with
-      `layout: page` in the front-matter. See readme for usage.
-    {% endcomment %}
-
-    {% assign pages_list = site.pages | sort:"url" %}
-    {% for node in pages_list %}
-      {% if node.title != null %}
-        {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
-
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a> {% comment %} The code below dynamically generates a sidebar nav of pages with `layout: page` in the front-matter. See readme for usage.
+    {% endcomment %} {% assign pages_list = site.pages | sort:"url" %} {% for node in pages_list %} {% if node.title != null %} {% if node.layout == "page" %}
+    <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a> {% endif %} {% endif %} {% endfor %}
   </nav>
 
-  <div class="sidebar-item">
+  <div class="social-box">
+    <a class="social" target="_blank" href="http://twitter.com/colleowino"><i class="fa fa-twitter-square"></i></a>
+    <a class="social" target="_blank" href="http://github.com/colleowino"><i class="fa fa-github-square"></i></a>
+    <a class="social" href="mailto:colleowino@gmail.com"><i class="fa fa-envelope-square"></i></a>
+  </div>
+
+  <div class="sidebar-footer">
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
