switched to work sans

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="/css/extras.css">
   <link rel="stylesheet" href="/css/octicons/octicons.css">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Work+Sans">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 	{% for style in page.styles %}
