--- a/css/extras.css
+++ b/css/extras.css
@@ -11,3 +11,45 @@
 .sidebar-footer{
 	padding: 0.5rem 1.5rem;
 }
+
+html {
+  font-family: "Work Sans", Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat", Helvetica, Arial, sans-serif;
+}
+
+h1{
+	font-size: 1.5rem;
+}
+
+h2{
+	font-size: 1.3rem;
+}
+
+h3{
+	font-size: 1rem;
+}
+
+.sidebar{
+	font-family: "Work Sans", Helvetica, Arial, sans-serif;
+}
+
+.pagination{
+	font-family: "Work Sans", Helvetica, Arial, sans-serif;
+}
+
+@media (min-width: 38em) {
+  html {
+    font-size: 17px;
+  }
+}
+
+.related{
+	padding-top:0.2rem;
+}
+
+.page, .post{
+	margin-bottom:2em;
+}
