--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,5 +32,5 @@
 	<link rel="icon" href="/public/32.png">
 
   <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="feed.xml">
 </head>
