--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,20 +40,7 @@
   <!-- Wrap all page content here -->
   <div id="wrap">
     <!-- Navbar header -->
-  <nav class="navbar navbar-default">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{{ site.baseurl }}"><i class="fa fa-home"></i></a>
-    </div>
-    <div id="navbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ site.baseurl }}blog.html">BLOG</a></li>
-        <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
-        <li><a href="http://biomadeira.github.io/vitae">RESUME</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    {% include header.html %}
 
     {{ content }}
 
