--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,7 @@ body {
   background-color: #fff;
   font-family: 'Source Sans Pro', sans-serif;
   /* The html and body elements cannot have any padding or margin. */
-  border-top: 3px solid #27A822;
+  border-top: 3px solid #039be5;
 }
 /* Wrapper for page content to push down footer */
 #wrap {
@@ -96,7 +96,7 @@ body {
   margin: 20px 0;
 }
 .container a {
-  color: #27A822;
+  color: #039be5;
 }
 .container a:hover {
   color: #267723;
@@ -183,7 +183,7 @@ body {
 	color: #6b6b6b;
 }
 div.footer{
-  border-bottom: 5px solid #27A822;;
+  border-bottom: 5px solid #039be5;
 }
 /* Set the fixed height of the footer here */
 /*.footer {
