--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,38 +1,47 @@
 ---
-layout: default
+layout: home
 ---
 
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-
-	<p class="post-tag">
-			<span>{% for cat in page.categories %}<a href="{{ '/category'}}/#{{ cat }}"><span class="octicon octicon-list-unordered"></span>&nbsp;{{ cat }}</a>{% endfor %}</span>
-			<span>{% for tag in page.tags %}
-					<a class="word-keep" href="{{ '/tags' | prepend: site.baseurl }}/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a> {% endfor %} </span>
-	</p>
-
-  <span class="post-date">{{ page.date | date_to_string }}</span>
-{% if page.excerpt %}
-<div class="message">
-  {{ page.excerpt }}
+<div class="container">
+  <div class="blog-post">
+    <h3>
+      <strong><a href="{{ page.url }}">{{ page.title }}</a></strong>
+    </h3>
+  </div>
+  <div class="blog-title">
+    <h4>
+    {{ page.date | date: "%B %e, %Y" }}
+      &nbsp;&nbsp;
+      {% for tag in page.tags %}
+       <span class="label label-success">{{ tag }}</span>
+      {% endfor %}
+    </h4>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <div class="blogpost">
+        {{ content }}
+         <hr>
+         <div class="related-posts">
+           <h5>Related Posts</h5>
+           {% for post in site.related_posts limit:3 %}
+            <div class="row">
+               <div class="col-sm-4 col-md-4 col-lg-4">
+                 <h6 style="text-align: right">
+                  {{ post.date | date: "%B %e, %Y" }}
+                 </h6>
+               </div>
+               <div class="col-sm-8 col-md-8 col-lg-8">
+                 <h6 style="text-align: left">
+                  <strong><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></strong>
+                 </h6>
+               </div>
+            </div>
+          {% endfor %}
+         </div>
+      </div>
+    </div>
+  </div>
+  {% include disqus.html %}
 </div>
-{% endif %}
 
-  {{ content }}
-</div>
-<h1 class="text-center"> End of story </h1>
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
