--- a/static/css/main.css
+++ b/static/css/main.css
@@ -101,6 +101,9 @@ body {
 .container a:hover {
   color: #267723;
 }
+img{
+  display: block;
+}
 .img-responsive {
  display: block;
  height: auto;
