--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,6 +22,9 @@ body {
 /* Navbar
 -------------------------------------------------- */
 
+.navbar{
+  border-bottom: 0;
+}
 .navbar-static-top {
   margin-bottom: 10px;
 }
@@ -90,7 +93,6 @@ body {
 .container {
   width: auto;
   max-width: 800px;
-  text-align: center;
 }
 .container .text-muted {
   margin: 20px 0;
@@ -143,6 +145,7 @@ img{
 .social {
   padding-top: 12px;
   word-spacing: 25px;
+  text-align: center;
 }
 .social h4 > a {
   color: #000000;
@@ -157,9 +160,10 @@ img{
 }
 .blog-post{
   padding-top: 15px;
-}
+  }
 .blog-title{
   padding-top: 2px;
+  text-align: center;
 }
 .related-posts h4 {
   text-align: center;
@@ -177,11 +181,84 @@ img{
   font-size: 18px;
 }
 
+
+/* Project page 
+-------------------------------------------------- */
+.container { 
+  width: 960px;
+  margin: 0 auto;
+}
+h3{
+  color: grey;
+  margin-top: 10px;
+  text-align: center;
+}
+.project{
+  display: inline-block;
+  width: 50%;
+  float: left;
+  padding:20px;
+}
+.screenshot{
+  width: 100%;
+  height: 500px;
+}
+h4{
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+/* Tags
+-------------------------------------------------- */
+.tag-box {
+    list-style: none;
+    margin: 0;
+    padding: 4px 0;
+    overflow: hidden;
+    *zoom: 1;
+}
+
+.tag-box:before, .tag-box:after {
+    display: table;
+    content: "";
+    line-height: 0;
+}
+
+.tag-box:after {
+    clear: both;
+}
+
+.tag-box.inline li {
+    float: left;
+    font-size: 14px;
+    font-size: 1em;
+    line-height: 2.1;
+}
+
+.tag-box a {
+    padding: 4px 6px;
+    margin: 2px;
+    background-color: #e6e6e6;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 2px;
+    text-decoration: none;
+}
+
+.tag-box a span {
+    vertical-align: super;
+    font-size: 10px;
+    font-size: 0.875rem;
+}
+
 /* Footer 
 -------------------------------------------------- */
 
 .footer {
   text-decoration: none !important;
+}
+#footer{
+  text-align:center;
 }
 .text-muted {
 	color: #6b6b6b;
