left align h3 in blogpost

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -103,6 +103,10 @@ body {
 .container a:hover {
   color: #267723;
 }
+.blogpost h3{
+  text-align: left;
+  margin-top: 30px;
+}
 img{
   display: block;
 }
