using source sans pro

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,9 @@
         {% endif %}
       {% endfor %}
 
+    <a class="sidebar-nav-item" href="{{ site.resume }}">My Resume</a>
+
+
     </nav>
 		<div class="social-box">
 		<a class="social" target="_blank"
