--- a/css/hyde.css
+++ b/css/hyde.css
@@ -91,8 +91,8 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
   font-size: 2.25rem;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 /* Sidebar nav */
