--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,35 +4,47 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  
-	<p class="post-tag">
-			<span>{% for cat in page.categories %}<a href="{{ '/category' | prepend: site.baseurl | prepend: site.url }}/#{{ cat }}"><span class="octicon octicon-list-unordered"></span>&nbsp;{{ cat }}</a>{% endfor %}</span>
-			<span>{% for tag in page.tags %}
-					<a class="word-keep" href="{{ '/tags' | prepend: site.baseurl }}/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a> {% endfor %} </span>
-	</p>
+
+  <p class="post-tag">
+    <span
+      >{% for cat in page.categories %}<a
+        href="{{ '/category' | prepend: site.baseurl | prepend: site.url }}/#{{ cat }}"
+        ><span class="octicon octicon-list-unordered"></span>&nbsp;{{ cat }}</a
+      >{% endfor %}</span
+    >
+    <span
+      >{% for tag in page.tags %}
+      <a
+        class="word-keep"
+        href="{{ '/tags' | prepend: site.baseurl }}/#{{ tag }}"
+        ><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a
+      >
+      {% endfor %}
+    </span>
+  </p>
 
   <span class="post-date">{{ page.date | date_to_string }}</span>
-{% if page.excerpt %}
+  <!-- {% if page.excerpt %}
 <div class="message">
   {{ page.excerpt }}
 </div>
-{% endif %}
+{% endif %} -->
 
   {{ content }}
 </div>
-<h1 class="text-center"> End of story </h1>
+<h1 class="text-center">End of story</h1>
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
+    <li>
+      <h3>
+        <a href="{{ post.url }}">
+          {{ post.title }}
+          <small>{{ post.date | date_to_string }}</small>
+        </a>
+      </h3>
+    </li>
     {% endfor %}
   </ul>
 </div>
